WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121650
ASSERTs in isMainThread after USE(WEB_THREAD) MainThread changes
https://bugs.webkit.org/show_bug.cgi?id=121650
Summary
ASSERTs in isMainThread after USE(WEB_THREAD) MainThread changes
Joseph Pecoraro
Reported
2013-09-19 18:03:11 PDT
I broke Safari Extensions with my change outside of USE(WEB_THREAD): 1 0x10cc62680 WTFCrash 2 0x10cc85ffa WTF::isMainThread() 3 0x10ead5836 WebCore::localizedString(char const*) 4 0x10b41d4f8 WebKit::WebProcess::initializeProcessName(WebKit::ChildProcessInitializationParameters const&) 5 0x10b0073c7 WebKit::ChildProcess::initialize(WebKit::ChildProcessInitializationParameters const&) 6 0x10b25b2aa int WebKit::ChildProcessMain<WebKit::WebProcess, WebKit::WebContentProcessMainDelegate>(int, char**) 7 0x10b25b08b WebContentProcessMain 8 0x10afa3d18 WebKit::BootstrapMain(int, char**) 9 0x10afa3b92 main So I will suggest a more targeted fix not changing anything outside of USE(WEB_THREAD).
Attachments
[PATCH] Proposed Fix
(1.31 KB, patch)
2013-09-19 18:04 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2013-09-19 18:04:48 PDT
Created
attachment 212111
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 2
2013-09-19 18:40:16 PDT
Comment on
attachment 212111
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 212111 Committed
r156134
: <
http://trac.webkit.org/changeset/156134
>
WebKit Commit Bot
Comment 3
2013-09-19 18:40:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug