ASSERTs in isMainThread after USE(WEB_THREAD) MainThread changes https://bugs.webkit.org/show_bug.cgi?id=121650

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2013-09-19
Reviewed by Benjamin Poulain.

* wtf/mac/MainThreadMac.mm:
(WTF::initializeMainThreadPlatform):

Canonical link: https://commits.webkit.org/139649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156134 268f45cc-cd09-0410-ab3c-d52691b4dbfc